# EDIL_main

./: README.md
shadow_camera/: pyproject.toml
shadow_camera/src/shadow_camera/: opencv.py  realsense.py
shadow_camera/test/: test_camera.py  test_realsense.py  test_vi.py
shadow_rm_act/config/: config.yaml
shadow_rm_act/src/shadow_act/eval/: EDIL_GLTScoordinated_MOVE_on_Real.py  policy_eval_config.py  policy_evaluate.py  policy_train_config.py  receive.py  rm_act_eval_ycy.py
shadow_rm_act/src/shadow_act/models/: backbone.py  detr_vae.py  latent_model.py  position_encoding.py  transformer.py
shadow_rm_act/src/shadow_act/models/Mydetr/: detr_vae.py  detr_vae1.py
shadow_rm_act/src/shadow_act/network/: policy.py
shadow_rm_act/src/shadow_act/train/: train_MultimodalArm_gpu0.py
shadow_rm_act/src/shadow_act/train/traingripper/: EDIL_GLTSmodel_coordinated.py  EDIL_train_GLTSmodel_coordinated_S1.py  data_prepare.py
